--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p>Multi-camera streaming system built with Flask, WebRTC and YOLO.</p>
 
     <iframe width="100%" height="400"
-      src="https://youtu.be/D6nZf-7knyQ"
+      src="https://www.youtube.com/embed/D6nZf-7knyQ"
       frameborder="0"
       allowfullscreen>
     </iframe>
