Modify iframe params
Modify iframe params

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
     <h3>Real-Time Vision Platform</h3>
     <p>Multi-camera streaming system built with Flask, WebRTC and YOLO.</p>
 
-    <iframe width="100%" height="400"
-      src="https://www.youtube.com/embed/D6nZf-7knyQ"
+    <iframe 
+      width="100%" 
+      height="400" 
+      src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
+      title="YouTube video player"
       frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
   </div>
