Added section info Grafana
Added section info Grafana

--- a/index.html
+++ b/index.html
@@ -49,7 +49,31 @@
 
   <div class="card">
     <h3>OEE Analytics Platform</h3>
+    <h4>¿Qué es el OEE?</h4>  
+    <p>OEE (Overall Equipment Effectiveness) es el indicador de referencia para medir la productividad de fabricación. En pocas palabras, identifica el porcentaje de tiempo de fabricación que es realmente productivo. Una puntuación de OEE del 100% significa que sólo se fabrican piezas buenas, lo más rápido posible y sin tiempos muertos. En el lenguaje de la OEE, esto significa un 100% de calidad (sólo piezas buenas), un 100% de rendimiento (lo más rápido posible) y un 100% de disponibilidad (sin tiempo de parada).</p>
+  
+    <h4>¿Por qué es importante medir el OEE?</h4>  
+    <p>Medir el OEE es una de las mejores prácticas que se deben hacer en las industrias. Aquí te explicamos por qué:
+
+    Identificación de Eficiencia: Ayuda a identificar las áreas donde un proceso de producción no está alcanzando la eficiencia óptima, proporcionando una visión clara de las causas de la pérdida de productividad.
+    Benchmarking y Mejora: Al rastrear el OEE, las empresas pueden establecer referencias y seguir las mejoras a lo largo del tiempo, lo que conduce a un mejoramiento continuo de la eficiencia de producción.
+    Reducción de Desperdicio: Permite identificar el desperdicio en forma de tiempo de inactividad, pérdidas de velocidad y defectos de calidad, así como la implementación de estrategias para impulsar la excelencia operativa de los procesos.
+    Toma de Decisiones Basada en Datos: Mediante las tecnologías de monitoreo, es posible calcular y rastrear el OEE, obteniendo información cuantificable que permite tomar decisiones informadas sobre el mantenimiento de equipos, ajustes en los procesos e inversiones de capital.</p>
+
     <p>Industrial monitoring system using SQL, Redshift and Grafana.</p>
+
+    <h3>Plant OEE monitor Assembly Line - Mobile telephony
+      <iframe 
+      width="100%" 
+      height="400" 
+      src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+
+
     <a class="btn" href="files/grafana-dashboard.json" target="_blank">
       View Grafana JSON
     </a>
