--- a/index.html
+++ b/index.html
@@ -48,21 +48,36 @@
   <h2>Industrial Analytics</h2>
 
   <div class="card">
-    <h3>OEE Analytics Platform</h3>
-    <h4>¿Qué es el OEE?</h4>  
-    <p>OEE (Overall Equipment Effectiveness) es el indicador de referencia para medir la productividad de fabricación. En pocas palabras, identifica el porcentaje de tiempo de fabricación que es realmente productivo. Una puntuación de OEE del 100% significa que sólo se fabrican piezas buenas, lo más rápido posible y sin tiempos muertos. En el lenguaje de la OEE, esto significa un 100% de calidad (sólo piezas buenas), un 100% de rendimiento (lo más rápido posible) y un 100% de disponibilidad (sin tiempo de parada).</p>
-  
-    <h4>¿Por qué es importante medir el OEE?</h4>  
-    <p>Medir el OEE es una de las mejores prácticas que se deben hacer en las industrias. Aquí te explicamos por qué:
+  <h2 class="section-title">Industrial OEE Monitoring System using SQL, Redshift and Grafana</h2>
 
-    Identificación de Eficiencia: Ayuda a identificar las áreas donde un proceso de producción no está alcanzando la eficiencia óptima, proporcionando una visión clara de las causas de la pérdida de productividad.
-    Benchmarking y Mejora: Al rastrear el OEE, las empresas pueden establecer referencias y seguir las mejoras a lo largo del tiempo, lo que conduce a un mejoramiento continuo de la eficiencia de producción.
-    Reducción de Desperdicio: Permite identificar el desperdicio en forma de tiempo de inactividad, pérdidas de velocidad y defectos de calidad, así como la implementación de estrategias para impulsar la excelencia operativa de los procesos.
-    Toma de Decisiones Basada en Datos: Mediante las tecnologías de monitoreo, es posible calcular y rastrear el OEE, obteniendo información cuantificable que permite tomar decisiones informadas sobre el mantenimiento de equipos, ajustes en los procesos e inversiones de capital.</p>
+  <h3>OEE Analytics Platform</h3>
 
-    <p>Industrial monitoring system using SQL, Redshift and Grafana.</p>
+  <h4>What is OEE?</h4>  
+  <p>
+  OEE (Overall Equipment Effectiveness) is the standard metric used to measure manufacturing productivity. 
+  In simple terms, it identifies the percentage of manufacturing time that is truly productive. 
+  An OEE score of 100% means that only good parts are produced, as fast as possible, with no downtime. 
+  In OEE terminology, this represents 100% Quality (only good parts), 100% Performance (as fast as possible), 
+  and 100% Availability (no downtime).
+  </p>
 
-    <h3>Plant OEE monitor Assembly Line - Mobile telephony
+  <h4>Why is measuring OEE important?</h4>  
+  <p>
+  Measuring OEE is considered a best practice in industrial environments. Here’s why:
+  </p>
+
+  <ul>
+    <li><strong>Efficiency Identification:</strong> Helps identify areas where production processes are not reaching optimal efficiency, providing clear visibility into productivity losses.</li>
+    <li><strong>Benchmarking and Continuous Improvement:</strong> By tracking OEE over time, companies can set benchmarks and drive continuous improvement initiatives.</li>
+    <li><strong>Waste Reduction:</strong> Identifies waste in the form of downtime, speed losses, and quality defects, enabling strategies to improve operational excellence.</li>
+    <li><strong>Data-Driven Decision Making:</strong> Through monitoring technologies, OEE can be calculated and tracked, providing measurable insights to support equipment maintenance, process adjustments, and capital investment decisions.</li>
+  </ul>
+
+  <p class="footer-text">
+  Industrial monitoring system using SQL, Redshift and Grafana.
+  </p>
+
+    <h3>Plant OEE monitor Assembly Line - Mobile telephony</h3>
       <iframe 
       width="100%" 
       height="400" 
