--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </iframe>
 
 
-    <a class="btn" href="files/grafana-dashboard.json" target="_blank">
+    <a class="btn" href="files/Plant Monitor OEE Mobile.json" target="_blank">
       View Grafana JSON
     </a>
   </div>
