Added manufacturing section
Added manufacturing section

--- a/index.html
+++ b/index.html
@@ -48,34 +48,34 @@
   <h2>Industrial Analytics</h2>
 
   <div class="card">
-  <h2 class="section-title">Industrial OEE Monitoring System using SQL, Redshift and Grafana</h2>
+  <h2 class="section-title">Industrial OEE Monitoring System using SQL, Redshift and Grafana in REAL TIME</h2>
+ 
+    <h3>OEE Analytics Platform</h3>
 
-  <h3>OEE Analytics Platform</h3>
+    <h4>What is OEE?</h4>  
+    <p>
+    OEE (Overall Equipment Effectiveness) is the standard metric used to measure manufacturing productivity. 
+    In simple terms, it identifies the percentage of manufacturing time that is truly productive. 
+    An OEE score of 100% means that only good parts are produced, as fast as possible, with no downtime. 
+    In OEE terminology, this represents 100% Quality (only good parts), 100% Performance (as fast as possible), 
+    and 100% Availability (no downtime).
+    </p>
 
-  <h4>What is OEE?</h4>  
-  <p>
-  OEE (Overall Equipment Effectiveness) is the standard metric used to measure manufacturing productivity. 
-  In simple terms, it identifies the percentage of manufacturing time that is truly productive. 
-  An OEE score of 100% means that only good parts are produced, as fast as possible, with no downtime. 
-  In OEE terminology, this represents 100% Quality (only good parts), 100% Performance (as fast as possible), 
-  and 100% Availability (no downtime).
-  </p>
+    <h4>Why is measuring OEE important?</h4>  
+    <p>
+    Measuring OEE is considered a best practice in industrial environments. Here’s why:
+    </p>
 
-  <h4>Why is measuring OEE important?</h4>  
-  <p>
-  Measuring OEE is considered a best practice in industrial environments. Here’s why:
-  </p>
+    <ul>
+      <li><strong>Efficiency Identification:</strong> Helps identify areas where production processes are not reaching optimal efficiency, providing clear visibility into productivity losses.</li>
+      <li><strong>Benchmarking and Continuous Improvement:</strong> By tracking OEE over time, companies can set benchmarks and drive continuous improvement initiatives.</li>
+      <li><strong>Waste Reduction:</strong> Identifies waste in the form of downtime, speed losses, and quality defects, enabling strategies to improve operational excellence.</li>
+      <li><strong>Data-Driven Decision Making:</strong> Through monitoring technologies, OEE can be calculated and tracked, providing measurable insights to support equipment maintenance, process adjustments, and capital investment decisions.</li>
+    </ul>
 
-  <ul>
-    <li><strong>Efficiency Identification:</strong> Helps identify areas where production processes are not reaching optimal efficiency, providing clear visibility into productivity losses.</li>
-    <li><strong>Benchmarking and Continuous Improvement:</strong> By tracking OEE over time, companies can set benchmarks and drive continuous improvement initiatives.</li>
-    <li><strong>Waste Reduction:</strong> Identifies waste in the form of downtime, speed losses, and quality defects, enabling strategies to improve operational excellence.</li>
-    <li><strong>Data-Driven Decision Making:</strong> Through monitoring technologies, OEE can be calculated and tracked, providing measurable insights to support equipment maintenance, process adjustments, and capital investment decisions.</li>
-  </ul>
-
-  <p class="footer-text">
-  Industrial monitoring system using SQL, Redshift and Grafana.
-  </p>
+    <p class="footer-text">
+    Industrial monitoring system using SQL, Redshift and Grafana.
+    </p>
 
     <h3>Plant OEE monitor Assembly Line - Mobile telephony</h3>
       <iframe 
@@ -92,6 +92,43 @@
     <a class="btn" href="files/Plant Monitor OEE Mobile.json" target="_blank">
       View Grafana JSON
     </a>
+
+    <h3>Assembly Line Production Monitoring Dashboard</h3>
+
+    <p>
+    This real-time production monitoring dashboard provides continuous visibility into active assembly line orders, 
+    including manufacturer, model, color, order status, and planned versus produced quantities.
+    </p>
+
+    <p>
+    The solution enables real-time tracking of material input to the production line, monitoring balances between 
+    initial quantities, line input, and completed output, while allowing immediate identification of operational deviations.
+    </p>
+
+    <p>
+    Its primary objective is to enhance real-time operational visibility, optimize production planning, 
+    and minimize disruptions through data-driven decision-making.
+    </p>
+
+    <p class="footer-text">
+    Developed using SQL, Amazon Redshift, and Grafana for real-time data visualization.
+    </p>
+
+    <h3>Manufacturing Operations & Order Tracking Dashboard</h3>
+      <iframe 
+      width="100%" 
+      height="400" 
+      src="https://www.youtube.com/embed/yPQCoDDLgqc?rel=0"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+
+
+    <a class="btn" href="files/Manufacturing Operations & Order Tracking Dashboard.json" target="_blank">
+      View Grafana JSON
+    </a>
   </div>
 
   <div class="card">
@@ -101,6 +138,7 @@
       Download Power BI File
     </a>
   </div>
+
 
 </section>
 
