--- a/index.html
+++ b/index.html
@@ -20,18 +20,23 @@
   <h2>About Me</h2>
   <div class="card">
     <p>
-      I design and build industrial data platforms and real-time AI systems.
-      Focused on scalable data architecture, OEE analytics and computer vision.
+      I design and architect industrial data platforms and real-time AI systems,
+      specialized in scalable data architectures, OEE analytics, and computer vision solutions
+      for manufacturing environments.
     </p>
   </div>
 </section>
 
 <section>
-  <h2>Computer Vision – Rapax</h2>
+  <h2>Computer Vision</h2>
   <div class="card">
     <h3>Real-Time Vision Platform</h3>
-    <p>Multi-camera streaming system built with Flask, WebRTC and YOLO.</p>
+    <p>
+      Multi-camera real-time streaming system built with Flask, WebRTC, and YOLO,
+      designed for scalable industrial monitoring and AI-based event detection.
+    </p>
 
+    <h4>Live System Preview</h4>
     <iframe 
       width="100%" 
       height="400" 
@@ -47,99 +52,97 @@
 <section>
   <h2>Industrial Analytics</h2>
 
+  <!-- OEE PROJECT -->
   <div class="card">
-  <h2 class="section-title">Industrial OEE Monitoring System using SQL, Redshift and Grafana in REAL TIME</h2>
- 
-    <h3>OEE Analytics Platform</h3>
+
+    <h3>Industrial OEE Monitoring System (Real-Time)</h3>
+
+    <p>
+      Real-time industrial monitoring platform built using SQL, Amazon Redshift, and Grafana,
+      designed to calculate and visualize Overall Equipment Effectiveness (OEE) in manufacturing environments.
+    </p>
 
     <h4>What is OEE?</h4>  
     <p>
-    OEE (Overall Equipment Effectiveness) is the standard metric used to measure manufacturing productivity. 
-    In simple terms, it identifies the percentage of manufacturing time that is truly productive. 
-    An OEE score of 100% means that only good parts are produced, as fast as possible, with no downtime. 
-    In OEE terminology, this represents 100% Quality (only good parts), 100% Performance (as fast as possible), 
-    and 100% Availability (no downtime).
+      OEE (Overall Equipment Effectiveness) is the standard metric used to measure manufacturing productivity.
+      It identifies the percentage of manufacturing time that is truly productive.
+      A 100% OEE score represents perfect Quality, Performance, and Availability.
     </p>
 
     <h4>Why is measuring OEE important?</h4>  
-    <p>
-    Measuring OEE is considered a best practice in industrial environments. Here’s why:
-    </p>
-
     <ul>
-      <li><strong>Efficiency Identification:</strong> Helps identify areas where production processes are not reaching optimal efficiency, providing clear visibility into productivity losses.</li>
-      <li><strong>Benchmarking and Continuous Improvement:</strong> By tracking OEE over time, companies can set benchmarks and drive continuous improvement initiatives.</li>
-      <li><strong>Waste Reduction:</strong> Identifies waste in the form of downtime, speed losses, and quality defects, enabling strategies to improve operational excellence.</li>
-      <li><strong>Data-Driven Decision Making:</strong> Through monitoring technologies, OEE can be calculated and tracked, providing measurable insights to support equipment maintenance, process adjustments, and capital investment decisions.</li>
+      <li><strong>Efficiency Identification:</strong> Detects productivity losses across production lines.</li>
+      <li><strong>Benchmarking & Continuous Improvement:</strong> Enables long-term performance tracking.</li>
+      <li><strong>Waste Reduction:</strong> Identifies downtime, speed losses, and quality defects.</li>
+      <li><strong>Data-Driven Decisions:</strong> Supports maintenance planning and capital investments.</li>
     </ul>
 
-    <p class="footer-text">
-    Industrial monitoring system using SQL, Redshift and Grafana.
-    </p>
-
-    <h4>Plant OEE monitor Assembly Line - Mobile telephony</h4>
-      <iframe 
+    <h4>Live Dashboard Preview</h4>
+    <iframe 
       width="100%" 
       height="400" 
       src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
-      title="YouTube video player"
+      title="OEE Dashboard"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
 
-
-    <a class="btn" href="files/Plant Monitor OEE Mobile.json" target="_blank">
+    <a class="btn" href="files/plant-monitor-oee-mobile.json" target="_blank">
       View Grafana JSON
     </a>
+
+  </div>
+
+  <!-- PRODUCTION MONITORING PROJECT -->
+  <div class="card">
 
     <h3>Assembly Line Production Monitoring Dashboard</h3>
 
     <p>
-    This real-time production monitoring dashboard provides continuous visibility into active assembly line orders, 
-    including manufacturer, model, color, order status, and planned versus produced quantities.
+      This real-time production monitoring dashboard provides continuous visibility into
+      active assembly line orders, including manufacturer, model, color, order status,
+      and planned versus produced quantities.
     </p>
 
     <p>
-    The solution enables real-time tracking of material input to the production line, monitoring balances between 
-    initial quantities, line input, and completed output, while allowing immediate identification of operational deviations.
+      The solution enables real-time tracking of material input, production balances,
+      and immediate identification of operational deviations.
     </p>
 
-    <p>
-    Its primary objective is to enhance real-time operational visibility, optimize production planning, 
-    and minimize disruptions through data-driven decision-making.
-    </p>
-
-    <h4>Manufacturing Operations & Order Tracking Dashboard</h4>
-      <iframe 
+    <h4>Live Dashboard Preview</h4>
+    <iframe 
       width="100%" 
       height="400" 
       src="https://www.youtube.com/embed/yPQCoDDLgqc?rel=0"
-      title="YouTube video player"
+      title="Production Monitoring Dashboard"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
 
-
-    <a class="btn" href="files/Manufacturing Operations & Order Tracking Dashboard.json" target="_blank">
+    <a class="btn" href="files/manufacturing-operations-order-tracking-dashboard.json" target="_blank">
       View Grafana JSON
     </a>
 
     <p class="footer-text">
-    Developed using SQL, Amazon Redshift, and Grafana for real-time data visualization.
+      Developed using SQL, Amazon Redshift, and Grafana for real-time data visualization.
     </p>
 
   </div>
 
+  <!-- POWER BI -->
   <div class="card">
     <h3>Power BI Executive Dashboard</h3>
-    <p>Executive KPI dashboard for industrial performance analysis.</p>
+    <p>
+      Executive KPI dashboard focused on industrial performance analytics,
+      supporting strategic decision-making at management level.
+    </p>
+
     <a class="btn" href="files/dashboard.pbix" download>
       Download Power BI File
     </a>
   </div>
-
 
 </section>
 
