Added PBI section
Added PBI section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
       supporting strategic decision-making at management level.
     </p>
 
-    <a class="btn" href="files/dashboard.pbix" download>
+    <img src="assets/img/Production Line Control in Plant.png" alt="Production Line Control in Plant" width="500">
+
+    <a class="btn" href="files/Production Line Control in Plant.pbix" download>
       Download Power BI File
     </a>
   </div>
