Modifications in css file
Modifications in css file

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       supporting strategic decision-making at management level.
     </p>
 
-    <img src="assets/img/Production Line Control in Plant.png" alt="Production Line Control in Plant" width="500">
+    <img src="assets/img/Production Line Control in Plant.png" alt="Production Line Control in Plant">
 
     <a class="btn" href="files/Production Line Control in Plant.pbix" download>
       Download Power BI File
