Added info to pbi section
Added info to pbi section

--- a/index.html
+++ b/index.html
@@ -133,10 +133,34 @@
 
   <!-- POWER BI -->
   <div class="card">
-    <h3>Power BI Executive Dashboard</h3>
+    <h3>Production Line Control & Data Reconciliation Dashboard</h3>
+
     <p>
-      Executive KPI dashboard focused on industrial performance analytics,
-      supporting strategic decision-making at management level.
+    This real-time production monitoring dashboard provides comprehensive visibility into manufacturing line performance 
+    and ensures data consistency between operational plant systems (Plant) and the corporate data warehouse (Amazon Redshift).
+    </p>
+
+    <p>
+    The upper section displays an hourly line status heatmap, enabling supervisors to quickly identify active, idle, 
+    or underperforming production lines throughout the day. The color-coded visualization allows rapid operational assessment 
+    and anomaly detection.
+    </p>
+
+    <p>
+    The lower section presents a detailed hourly production comparison between PLANT and REDSHIFT systems, 
+    showing produced quantities and automatically calculating differences. This functionality enables:
+    </p>
+
+    <ul>
+      <li><strong>Real-time reconciliation</strong> between operational and analytical data sources</li>
+      <li><strong>Early detection of data inconsistencies</strong></li>
+      <li><strong>Validation of ETL processes and data pipelines</strong></li>
+      <li><strong>Increased reliability in executive reporting</strong></li>
+    </ul>
+
+    <p>
+    The dashboard supports operational control, data governance, and data-driven decision-making, 
+    ensuring alignment between shop-floor production systems and enterprise analytics platforms.
     </p>
 
     <img src="assets/img/Production Line Control in Plant.png" alt="Production Line Control in Plant">
