--- a/index.html
+++ b/index.html
@@ -16,24 +16,39 @@
   <p>Data & AI Architect | SAP BW/4HANA | Industrial Analytics | Computer Vision</p>
 </header>
 
+<!-- ABOUT -->
 <section>
   <h2>About Me</h2>
   <div class="card">
     <p>
       I design and architect industrial data platforms and real-time AI systems,
-      specialized in scalable data architectures, OEE analytics, and computer vision solutions
-      for manufacturing environments.
+      specialized in scalable data architectures, OEE analytics, SAP BW/4HANA,
+      and computer vision solutions for manufacturing environments.
+    </p>
+
+    <p>
+      With over 10 years of experience in data and analytics across multiple industries,
+      I focus on building robust architectures that connect shop-floor operations
+      with enterprise-level analytics and AI-driven insights.
     </p>
   </div>
 </section>
 
+<!-- COMPUTER VISION -->
 <section>
   <h2>Computer Vision</h2>
+
   <div class="card">
     <h3>Real-Time Vision Platform</h3>
+
     <p>
       Multi-camera real-time streaming system built with Flask, WebRTC, and YOLO,
       designed for scalable industrial monitoring and AI-based event detection.
+    </p>
+
+    <p>
+      The platform processes live video streams, detects safety and operational
+      events in real time, and exposes APIs for integration with third-party systems.
     </p>
 
     <h4>Live System Preview</h4>
@@ -41,94 +56,68 @@
       width="100%" 
       height="400" 
       src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
-      title="YouTube video player"
+      title="Real-Time Vision Platform"
       frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
   </div>
 </section>
 
+<!-- INDUSTRIAL ANALYTICS -->
 <section>
   <h2>Industrial Analytics</h2>
 
-  <!-- OEE PROJECT -->
+  <!-- OEE -->
   <div class="card">
-
     <h3>Industrial OEE Monitoring System (Real-Time)</h3>
 
     <p>
-      Real-time industrial monitoring platform built using SQL, Amazon Redshift, and Grafana,
-      designed to calculate and visualize Overall Equipment Effectiveness (OEE) in manufacturing environments.
+      Real-time industrial monitoring platform built using SQL, Amazon Redshift,
+      and Grafana, designed to calculate and visualize Overall Equipment Effectiveness (OEE).
     </p>
 
-    <h4>What is OEE?</h4>  
-    <p>
-      OEE (Overall Equipment Effectiveness) is the standard metric used to measure manufacturing productivity.
-      It identifies the percentage of manufacturing time that is truly productive.
-      A 100% OEE score represents perfect Quality, Performance, and Availability.
-    </p>
-
-    <h4>Why is measuring OEE important?</h4>  
     <ul>
-      <li><strong>Efficiency Identification:</strong> Detects productivity losses across production lines.</li>
-      <li><strong>Benchmarking & Continuous Improvement:</strong> Enables long-term performance tracking.</li>
-      <li><strong>Waste Reduction:</strong> Identifies downtime, speed losses, and quality defects.</li>
-      <li><strong>Data-Driven Decisions:</strong> Supports maintenance planning and capital investments.</li>
+      <li><strong>Efficiency Identification</strong></li>
+      <li><strong>Continuous Improvement</strong></li>
+      <li><strong>Waste Reduction</strong></li>
+      <li><strong>Data-Driven Decisions</strong></li>
     </ul>
 
-    <h4>Live Dashboard Preview</h4>
     <iframe 
       width="100%" 
       height="400" 
       src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
       title="OEE Dashboard"
       frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
 
     <a class="btn" href="files/plant-monitor-oee-mobile.json" target="_blank">
       View Grafana JSON
     </a>
-
   </div>
 
-  <!-- PRODUCTION MONITORING PROJECT -->
+  <!-- PRODUCTION MONITORING -->
   <div class="card">
-
     <h3>Assembly Line Production Monitoring Dashboard</h3>
 
     <p>
-      This real-time production monitoring dashboard provides continuous visibility into
-      active assembly line orders, including manufacturer, model, color, order status,
-      and planned versus produced quantities.
+      Real-time dashboard providing visibility into active assembly line orders,
+      including manufacturer, model, status, and planned vs produced quantities.
     </p>
 
-    <p>
-      The solution enables real-time tracking of material input, production balances,
-      and immediate identification of operational deviations.
-    </p>
-
-    <h4>Live Dashboard Preview</h4>
     <iframe 
       width="100%" 
       height="400" 
       src="https://www.youtube.com/embed/yPQCoDDLgqc?rel=0"
       title="Production Monitoring Dashboard"
       frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
 
     <a class="btn" href="files/manufacturing-operations-order-tracking-dashboard.json" target="_blank">
       View Grafana JSON
     </a>
-
-    <p class="footer-text">
-      Developed using SQL, Amazon Redshift, and Grafana for real-time data visualization.
-    </p>
-
   </div>
 
   <!-- POWER BI -->
@@ -136,40 +125,74 @@
     <h3>Production Line Control & Data Reconciliation Dashboard</h3>
 
     <p>
-    This real-time production monitoring dashboard provides comprehensive visibility into manufacturing line performance 
-    and ensures data consistency between operational plant systems (Plant) and the corporate data warehouse (Amazon Redshift).
-    </p>
-
-    <p>
-    The upper section displays an hourly line status heatmap, enabling supervisors to quickly identify active, idle, 
-    or underperforming production lines throughout the day. The color-coded visualization allows rapid operational assessment 
-    and anomaly detection.
-    </p>
-
-    <p>
-    The lower section presents a detailed hourly production comparison between PLANT and REDSHIFT systems, 
-    showing produced quantities and automatically calculating differences. This functionality enables:
+      Dashboard designed to ensure data consistency between operational plant systems
+      and Amazon Redshift data warehouse.
     </p>
 
     <ul>
-      <li><strong>Real-time reconciliation</strong> between operational and analytical data sources</li>
-      <li><strong>Early detection of data inconsistencies</strong></li>
-      <li><strong>Validation of ETL processes and data pipelines</strong></li>
-      <li><strong>Increased reliability in executive reporting</strong></li>
+      <li><strong>Real-time reconciliation</strong></li>
+      <li><strong>ETL validation</strong></li>
+      <li><strong>Data governance</strong></li>
+      <li><strong>Executive reporting reliability</strong></li>
     </ul>
 
-    <p>
-    The dashboard supports operational control, data governance, and data-driven decision-making, 
-    ensuring alignment between shop-floor production systems and enterprise analytics platforms.
-    </p>
-
-    <img src="assets/img/Production Line Control in Plant.png" alt="Production Line Control in Plant">
+    <img src="assets/img/Production Line Control in Plant.png"
+         alt="Production Line Control in Plant">
 
     <a class="btn" href="files/Production Line Control in Plant.pbix" download>
       Download Power BI File
     </a>
   </div>
 
+  <!-- INDUSTRIAL ARCHITECTURE -->
+  <div class="card">
+    <h3>Industrial Data Architecture</h3>
+
+    <p>
+      Scalable industrial data architecture designed to ingest real-time production events,
+      process KPIs in Amazon Redshift, and expose analytics to visualization platforms
+      such as Grafana and Power BI.
+    </p>
+
+    <p>
+      The architecture ensures synchronization between operational plant systems
+      and enterprise data warehouses, enabling real-time OEE calculation
+      and advanced analytics.
+    </p>
+
+    <img src="assets/img/industrial-Arquitectura_SIM.svg"
+         alt="Industrial Data Architecture Diagram">
+  </div>
+
+</section>
+
+<!-- CERTIFICATIONS -->
+<section>
+  <h2>Certifications & Education</h2>
+
+  <div class="card">
+    <ul>
+      <li>
+        <strong>SAP BW/4HANA Consultant</strong> – 
+        <a href="https://your-link-here.com" target="_blank">View Certificate</a>
+      </li>
+
+      <li>
+        <strong>Python Development Certification</strong> – 
+        <a href="https://your-link-here.com" target="_blank">View Certificate</a>
+      </li>
+
+      <li>
+        <strong>Frontend JavaScript Certification</strong> – 
+        <a href="https://your-link-here.com" target="_blank">View Certificate</a>
+      </li>
+
+      <li>
+        <strong>Project Mentoring Program – Universidad de Palermo</strong> – 
+        <a href="https://your-link-here.com" target="_blank">View Certificate</a>
+      </li>
+    </ul>
+  </div>
 </section>
 
 <footer>
