--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       and advanced analytics.
     </p>
 
-    <img src="assets/img/industrial-Arquitectura_SIM.svg"
+    <img src="assets/img/Industrial Data Architecture.svg"
          alt="Industrial Data Architecture Diagram">
   </div>
 
@@ -173,20 +173,33 @@
   <div class="card">
     <ul>
       <li>
-        <strong>SAP BW/4HANA Consultant</strong> – 
+        <strong>SAP Certified Associate - Data Engineer - SAP BW/4HANA</strong> – 
         <a href="https://your-link-here.com" target="_blank">View Certificate</a>
       </li>
-
       <li>
-        <strong>Python Development Certification</strong> – 
-        <a href="https://your-link-here.com" target="_blank">View Certificate</a>
+        <strong>Machine Learning</strong> – 
+        <a href="https://www.coursera.org/account/accomplishments/certificate/EE2V2KS6SZSD" target="_blank">View Certificate</a>
       </li>
-
+      <li>
+        <strong>AWS Machine Learning Foundations</strong> – 
+        <a href="https://www.udacity.com/certificate/HD6N3HNH" target="_blank">View Certificate</a>
+      </li>
+      <li>
+        <strong>Intro to Machine Learning</strong> – 
+        <a href="https://www.kaggle.com/learn/certification/aguirrenic/intro-to-machine-learning" target="_blank">View Certificate</a>
+      </li>      
+      <li>
+        <strong>Introducción a Python</strong> – 
+        <a href="files/cert/cert-python.pdf" target="_blank">View Certificate</a>
+      </li>
+      <li>
+        <strong>Python</strong> – 
+        <a href="https://www.kaggle.com/learn/certification/aguirrenic/python" target="_blank">View Certificate</a>
+      </li>
       <li>
         <strong>Frontend JavaScript Certification</strong> – 
-        <a href="https://your-link-here.com" target="_blank">View Certificate</a>
+        <a href="files/cert/cert-FrontEnd JS.pdf" target="_blank">View Certificate</a>
       </li>
-
       <li>
         <strong>Project Mentoring Program – Universidad de Palermo</strong> – 
         <a href="https://your-link-here.com" target="_blank">View Certificate</a>
