--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <ul>
       <li>
         <strong>SAP Certified Associate - Data Engineer - SAP BW/4HANA</strong> – 
-        <a href="https://your-link-here.com" target="_blank">View Certificate</a>
+        <a href="https://www.credly.com/badges/39c9e074-c5bf-4489-b5a7-47383a1645b9" target="_blank">View Certificate</a>
       </li>
       <li>
         <strong>Machine Learning</strong> – 
