--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
 
 <header>
   <h1>Nicolás Aguirre</h1>
-  <p 
-    data-en="Data & AI Architect | SAP BW/4HANA | Industrial Analytics | Computer Vision"
-    data-es="Arquitecto de Datos & IA | SAP BW/4HANA | Analítica Industrial | Visión por Computadora">
-    Data & AI Architect | SAP BW/4HANA | Industrial Analytics | Computer Vision
-  </p>
+
+  <p data-i18n="subtitle"></p>
 
   <div class="language-switch">
     <button onclick="setLanguage('en')">EN</button>
@@ -26,38 +23,24 @@
 
 <!-- ABOUT -->
 <section>
-  <h2 data-en="About Me" data-es="Sobre Mí">About Me</h2>
-  <div class="card">
-    <p 
-      data-en="I design and architect industrial data platforms and real-time AI systems, specialized in scalable data architectures, OEE analytics, SAP BW/4HANA, and computer vision solutions for manufacturing environments."
-      data-es="Diseño y arquitecto plataformas de datos industriales y sistemas de IA en tiempo real, especializado en arquitecturas escalables, analítica OEE, SAP BW/4HANA y soluciones de visión por computadora para entornos industriales.">
-      I design and architect industrial data platforms and real-time AI systems...
-    </p>
+  <h2 data-i18n="about_title"></h2>
 
-    <p 
-      data-en="With over 10 years of experience in data and analytics across multiple industries, I focus on building robust architectures that connect shop-floor operations with enterprise-level analytics and AI-driven insights."
-      data-es="Con más de 10 años de experiencia en datos y analítica en múltiples industrias, me enfoco en construir arquitecturas robustas que conecten operaciones de planta con analítica empresarial e insights impulsados por IA.">
-      With over 10 years of experience in data and analytics...
-    </p>
+  <div class="card">
+    <p data-i18n="about_paragraph_1"></p>
+    <p data-i18n="about_paragraph_2"></p>
   </div>
 </section>
 
 <!-- COMPUTER VISION -->
 <section>
-  <h2 data-en="Computer Vision" data-es="Visión por Computadora">Computer Vision</h2>
+  <h2 data-i18n="cv_title"></h2>
 
   <div class="card">
-    <h3 
-      data-en="Real-Time Vision Platform"
-      data-es="Plataforma de Visión en Tiempo Real">
-      Real-Time Vision Platform
-    </h3>
+    <h3 data-i18n="cv_project_title"></h3>
+    <p data-i18n="cv_paragraph_1"></p>
+    <p data-i18n="cv_paragraph_2"></p>
 
-    <p 
-      data-en="Multi-camera real-time streaming system built with Flask, WebRTC, and YOLO, designed for scalable industrial monitoring and AI-based event detection."
-      data-es="Sistema de streaming multi-cámara en tiempo real construido con Flask, WebRTC y YOLO, diseñado para monitoreo industrial escalable y detección de eventos basada en IA.">
-      Multi-camera real-time streaming system...
-    </p>
+    <h4 data-i18n="cv_preview"></h4>
 
     <iframe width="100%" height="400"
       src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
@@ -68,44 +51,32 @@
 
 <!-- INDUSTRIAL ANALYTICS -->
 <section>
-  <h2 
-    data-en="Industrial Analytics"
-    data-es="Analítica Industrial">
-    Industrial Analytics
-  </h2>
+  <h2 data-i18n="ia_title"></h2>
 
+  <!-- OEE -->
   <div class="card">
-    <h3 
-      data-en="Industrial OEE Monitoring System (Real-Time)"
-      data-es="Sistema de Monitoreo OEE Industrial (Tiempo Real)">
-      Industrial OEE Monitoring System (Real-Time)
-    </h3>
+    <h3 data-i18n="oee_title"></h3>
+    <p data-i18n="oee_paragraph"></p>
 
-    <p 
-      data-en="Real-time industrial monitoring platform built using SQL, Amazon Redshift, and Grafana, designed to calculate and visualize Overall Equipment Effectiveness (OEE)."
-      data-es="Plataforma de monitoreo industrial en tiempo real construida con SQL, Amazon Redshift y Grafana, diseñada para calcular y visualizar la Eficiencia Global de Equipos (OEE).">
-      Real-time industrial monitoring platform...
-    </p>
+    <ul>
+      <li data-i18n="oee_item_1"></li>
+      <li data-i18n="oee_item_2"></li>
+      <li data-i18n="oee_item_3"></li>
+      <li data-i18n="oee_item_4"></li>
+    </ul>
 
-    <a class="btn" href="files/plant-monitor-oee-mobile.json" target="_blank"
-       data-en="View Grafana JSON"
-       data-es="Ver JSON de Grafana">
-       View Grafana JSON
+    <a class="btn"
+       href="files/plant-monitor-oee-mobile.json"
+       target="_blank"
+       data-i18n="oee_button">
     </a>
   </div>
 
+  <!-- ARCHITECTURE -->
   <div class="card">
-    <h3 
-      data-en="Industrial Data Architecture"
-      data-es="Arquitectura de Datos Industrial">
-      Industrial Data Architecture
-    </h3>
-
-    <p 
-      data-en="Scalable industrial data architecture designed to ingest real-time production events, process KPIs in Amazon Redshift, and expose analytics to visualization platforms such as Grafana and Power BI."
-      data-es="Arquitectura de datos industrial escalable diseñada para ingerir eventos de producción en tiempo real, procesar KPIs en Amazon Redshift y exponer analítica a plataformas de visualización como Grafana y Power BI.">
-      Scalable industrial data architecture...
-    </p>
+    <h3 data-i18n="arch_title"></h3>
+    <p data-i18n="arch_paragraph_1"></p>
+    <p data-i18n="arch_paragraph_2"></p>
 
     <img src="assets/img/Industrial Data Architecture.svg"
          alt="Industrial Data Architecture Diagram">
@@ -114,11 +85,7 @@
 
 <!-- CERTIFICATIONS -->
 <section>
-  <h2 
-    data-en="Certifications & Education"
-    data-es="Certificaciones y Educación">
-    Certifications & Education
-  </h2>
+  <h2 data-i18n="cert_title"></h2>
 
   <div class="card">
     <ul>
@@ -134,6 +101,7 @@
   © 2026 Nicolás Aguirre
 </footer>
 
+<script src="js/translations.js"></script>
 <script src="js/main.js"></script>
 
 </body>
