--- a/index.html
+++ b/index.html
@@ -1,104 +1,173 @@
 <!DOCTYPE html>
 <html lang="en" id="htmlTag">
 <head>
-  <meta charset="UTF-8">
-  <title>Nicolás Aguirre | Data & AI Architect</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<title>Nicolás Aguirre | Data & AI Architect</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
 <header>
-  <h1>Nicolás Aguirre</h1>
+<h1>Nicolás Aguirre</h1>
+<p data-i18n="subtitle"></p>
 
-  <p data-i18n="subtitle"></p>
-
-  <div class="language-switch">
-    <button onclick="setLanguage('en')">EN</button>
-    <button onclick="setLanguage('es')">ES</button>
-  </div>
+<div class="language-switch">
+<button onclick="setLanguage('en')">EN</button>
+<button onclick="setLanguage('es')">ES</button>
+</div>
 </header>
 
 <!-- ABOUT -->
 <section>
-  <h2 data-i18n="about_title"></h2>
+<h2 data-i18n="about_title"></h2>
 
-  <div class="card">
-    <p data-i18n="about_paragraph_1"></p>
-    <p data-i18n="about_paragraph_2"></p>
-  </div>
+<div class="card">
+<p data-i18n="about_p1"></p>
+<p data-i18n="about_p2"></p>
+</div>
 </section>
 
 <!-- COMPUTER VISION -->
 <section>
-  <h2 data-i18n="cv_title"></h2>
+<h2 data-i18n="cv_title"></h2>
 
-  <div class="card">
-    <h3 data-i18n="cv_project_title"></h3>
-    <p data-i18n="cv_paragraph_1"></p>
-    <p data-i18n="cv_paragraph_2"></p>
+<div class="card">
+<h3 data-i18n="cv_project_title"></h3>
+<p data-i18n="cv_p1"></p>
+<p data-i18n="cv_p2"></p>
 
-    <h4 data-i18n="cv_preview"></h4>
+<h4 data-i18n="cv_preview"></h4>
 
-    <iframe width="100%" height="400"
-      src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
-      frameborder="0" allowfullscreen>
-    </iframe>
-  </div>
+<iframe width="100%" height="400"
+src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
+title="Real-Time Vision Platform"
+frameborder="0"
+allowfullscreen>
+</iframe>
+</div>
 </section>
 
 <!-- INDUSTRIAL ANALYTICS -->
 <section>
-  <h2 data-i18n="ia_title"></h2>
+<h2 data-i18n="ia_title"></h2>
 
-  <!-- OEE -->
-  <div class="card">
-    <h3 data-i18n="oee_title"></h3>
-    <p data-i18n="oee_paragraph"></p>
+<!-- OEE -->
+<div class="card">
+<h3 data-i18n="oee_title"></h3>
+<p data-i18n="oee_p"></p>
 
-    <ul>
-      <li data-i18n="oee_item_1"></li>
-      <li data-i18n="oee_item_2"></li>
-      <li data-i18n="oee_item_3"></li>
-      <li data-i18n="oee_item_4"></li>
-    </ul>
+<ul>
+<li><strong data-i18n="oee_l1"></strong></li>
+<li><strong data-i18n="oee_l2"></strong></li>
+<li><strong data-i18n="oee_l3"></strong></li>
+<li><strong data-i18n="oee_l4"></strong></li>
+</ul>
 
-    <a class="btn"
-       href="files/plant-monitor-oee-mobile.json"
-       target="_blank"
-       data-i18n="oee_button">
-    </a>
-  </div>
+<iframe width="100%" height="400"
+src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
+title="OEE Dashboard"
+frameborder="0"
+allowfullscreen>
+</iframe>
 
-  <!-- ARCHITECTURE -->
-  <div class="card">
-    <h3 data-i18n="arch_title"></h3>
-    <p data-i18n="arch_paragraph_1"></p>
-    <p data-i18n="arch_paragraph_2"></p>
+<a class="btn"
+href="files/Plant Monitor OEE Mobile.json"
+target="_blank"
+data-i18n="oee_btn">
+</a>
+</div>
 
-    <img src="assets/img/Industrial Data Architecture.svg"
-         alt="Industrial Data Architecture Diagram">
-  </div>
+<!-- PRODUCTION MONITORING -->
+<div class="card">
+<h3 data-i18n="pm_title"></h3>
+<p data-i18n="pm_p"></p>
+
+<iframe width="100%" height="400"
+src="https://www.youtube.com/embed/yPQCoDDLgqc?rel=0"
+title="Production Monitoring Dashboard"
+frameborder="0"
+allowfullscreen>
+</iframe>
+
+<a class="btn"
+href="files/Manufacturing Operations & Order Tracking Dashboard.json"
+target="_blank"
+data-i18n="pm_btn">
+</a>
+</div>
+
+<!-- POWER BI -->
+<div class="card">
+<h3 data-i18n="pbi_title"></h3>
+<p data-i18n="pbi_p"></p>
+
+<ul>
+<li><strong data-i18n="pbi_l1"></strong></li>
+<li><strong data-i18n="pbi_l2"></strong></li>
+<li><strong data-i18n="pbi_l3"></strong></li>
+<li><strong data-i18n="pbi_l4"></strong></li>
+</ul>
+
+<img src="assets/img/Production Line Control in Plant.png"
+alt="Production Line Control in Plant">
+
+<a class="btn"
+href="files/Production Line Control in Plant.pbix"
+download
+data-i18n="pbi_btn">
+</a>
+</div>
+
+<!-- INDUSTRIAL ARCHITECTURE -->
+<div class="card">
+<h3 data-i18n="arch_title"></h3>
+<p data-i18n="arch_p1"></p>
+<p data-i18n="arch_p2"></p>
+
+<img src="assets/img/Industrial Data Architecture.svg"
+alt="Industrial Data Architecture Diagram">
+</div>
+
 </section>
 
 <!-- CERTIFICATIONS -->
 <section>
-  <h2 data-i18n="cert_title"></h2>
+<h2 data-i18n="cert_title"></h2>
 
-  <div class="card">
-    <ul>
-      <li>SAP Certified Associate - Data Engineer - SAP BW/4HANA</li>
-      <li>Machine Learning</li>
-      <li>AWS Machine Learning Foundations</li>
-      <li>Python & Frontend JavaScript Certification</li>
-    </ul>
-  </div>
+<div class="card">
+<ul>
+<li><strong>SAP Certified Associate - Data Engineer - SAP BW/4HANA</strong> – 
+<a href="https://www.credly.com/badges/39c9e074-c5bf-4489-b5a7-47383a1645b9" target="_blank">View Certificate</a></li>
+
+<li><strong>Machine Learning</strong> – 
+<a href="https://www.coursera.org/account/accomplishments/certificate/EE2V2KS6SZSD" target="_blank">View Certificate</a></li>
+
+<li><strong>AWS Machine Learning Foundations</strong> – 
+<a href="https://www.udacity.com/certificate/HD6N3HNH" target="_blank">View Certificate</a></li>
+
+<li><strong>Intro to Machine Learning</strong> – 
+<a href="https://www.kaggle.com/learn/certification/aguirrenic/intro-to-machine-learning" target="_blank">View Certificate</a></li>
+
+<li><strong>Introducción a Python</strong> – 
+<a href="files/cert/cert-python.pdf" target="_blank">View Certificate</a></li>
+
+<li><strong>Python</strong> – 
+<a href="https://www.kaggle.com/learn/certification/aguirrenic/python" target="_blank">View Certificate</a></li>
+
+<li><strong>Frontend JavaScript Certification</strong> – 
+<a href="files/cert/cert-FrontEnd JS.pdf" target="_blank">View Certificate</a></li>
+
+<li><strong>Project Mentoring Program – Universidad de Palermo</strong> – 
+<a href="https://your-link-here.com" target="_blank">View Certificate</a></li>
+</ul>
+</div>
 </section>
 
 <footer>
-  © 2026 Nicolás Aguirre
+© 2026 Nicolás Aguirre
 </footer>
 
 <script src="js/translations.js"></script>
