Added defer in scripts main and translations
Added defer in scripts main and translations

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@ alt="Industrial Data Architecture Diagram">
 © 2026 Nicolás Aguirre
 </footer>
 
-<script src="js/translations.js"></script>
-<script src="js/main.js"></script>
+<script src="js/translations.js" defer></script>
+<script src="js/main.js" defer></script>
 
 </body>
 </html>
