--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Nicolás Aguirre | Enterprise Data Architect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -61,7 +62,7 @@
 
     <h4 data-i18n="architecture_label"></h4>
 
-    <img src="images/aws_architecture.svg" class="card-img">
+    <img src="img/Industrial Data Architecture.svg" class="card-img">
 
     <h4 data-i18n="design_label"></h4>
     <ul>
@@ -75,8 +76,12 @@
     <p data-i18n="aws_results"></p>
 
     <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/TU_VIDEO_AWS"
-              allowfullscreen></iframe>
+      <iframe width="100%" height="400"
+        src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
+        title="OEE Dashboard"
+        frameborder="0"
+        allowfullscreen>
+      </iframe>
     </div>
   </div>
 
@@ -101,8 +106,12 @@
     <p data-i18n="oee_results"></p>
 
     <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/TU_VIDEO_OEE"
-              allowfullscreen></iframe>
+      <iframe width="100%" height="400"
+        src="https://www.youtube.com/embed/yPQCoDDLgqc?rel=0"
+        title="Production Monitoring Dashboard"
+        frameborder="0"
+        allowfullscreen>
+      </iframe>
     </div>
   </div>
 </section>
@@ -111,7 +120,7 @@
   <div class="card center">
     <h3 data-i18n="contact_title"></h3>
     <p data-i18n="contact_desc"></p>
-    <a href="mailto:tuemail@email.com" class="btn"
+    <a href="mailto:aguirrenic@gmail.com" class="btn"
        data-i18n="contact_btn"></a>
   </div>
 </section>
