Changes in index.html
Changes in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <h4 data-i18n="architecture_label"></h4>
 
-    <img src="img/Industrial Data Architecture.svg" class="card-img">
+    <img src="assets/img/Industrial Data Architecture.svg" alt="Industrial Data Architecture Diagram" class="card-img">
 
     <h4 data-i18n="design_label"></h4>
     <ul>
