--- a/index.html
+++ b/index.html
@@ -82,9 +82,14 @@
     <h3 data-i18n="oee_title"></h3>
     <p data-i18n="oee_desc"></p>
 
-    <h4 data-i18n="architecture_label"></h4>
-
-    <img src="images/oee_architecture.svg" class="card-img">
+    <div class="video-wrapper">
+        <iframe width="100%" height="400"
+            src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
+            title="OEE Dashboard"
+            frameborder="0"
+            allowfullscreen>
+        </iframe>
+    </div>
 
     <h4 data-i18n="capabilities_label"></h4>
     <ul>
@@ -97,15 +102,10 @@
     <h4 data-i18n="impact_label"></h4>
     <p data-i18n="oee_results"></p>
 
-        <div class="video-wrapper">
-        <iframe width="100%" height="400"
-            src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
-            title="OEE Dashboard"
-            frameborder="0"
-            allowfullscreen>
-        </iframe>
-        </div>
-
+    <!-- PRODUCTION MONITORING -->
+    <div class="card">
+    <h3 data-i18n="pm_title"></h3>
+    <p data-i18n="pm_p"></p>
 
     <div class="video-wrapper">
       <iframe width="100%" height="400"
