--- a/index copy 2.html
+++ b/index copy 2.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 
-<!-- ================= Hero ================= -->
 <header class="hero">
   <div class="hero-content">
     <h1>Nicolás Aguirre</h1>
+
     <h2 data-i18n="hero_title"></h2>
+
     <p class="hero-sub" data-i18n="hero_sub"></p>
 
     <div class="hero-metrics">
@@ -23,7 +24,7 @@
       <span data-i18n="metric_4"></span>
     </div>
 
-    <a href="#summary" class="btn" data-i18n="hero_btn"></a>
+    <a href="#case-studies" class="btn" data-i18n="hero_btn"></a>
 
     <div class="language-switch">
       <button onclick="setLanguage('en')">EN</button>
@@ -32,46 +33,6 @@
   </div>
 </header>
 
-<!-- ================= Summary ================= -->
-<section id="summary">
-  <div class="summary-container">
-    <h2 data-i18n="summary_title">About Me</h2>
-    <p data-i18n="summary_desc">
-      Enterprise Data Architect con más de 10 años de experiencia diseñando arquitecturas de datos industriales y soluciones analíticas.
-    </p>
-    
-    <div class="summary-metrics">
-      <div class="metric">
-        <h3>10+</h3>
-        <p>Años de Experiencia</p>
-      </div>
-      <div class="metric">
-        <h3>50+</h3>
-        <p>Proyectos Completados</p>
-      </div>
-      <div class="metric">
-        <h3>5</h3>
-        <p>Industrias Diferentes</p>
-      </div>
-    </div>
-
-    <div class="summary-links">
-      <a href="https://www.linkedin.com/in/aguirrenic/" target="_blank" aria-label="LinkedIn">
-        <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
-      </a>
-      <a href="https://github.com/aguirrenic" target="_blank" aria-label="GitHub">
-        <img src="assets/icons/github.svg" alt="GitHub" />
-      </a>
-      <a href="mailto:aguirrenic@gmail.com" aria-label="Email">
-        <img src="assets/icons/email.svg" alt="Email" />
-      </a>
-    </div>
-
-    <a href="#case-studies" class="btn" data-i18n="summary_btn">Ver Proyectos</a>
-  </div>
-</section>
-
-<!-- ================= Impact ================= -->
 <section id="impact">
   <h2 data-i18n="impact_title"></h2>
 
@@ -91,7 +52,6 @@
   </div>
 </section>
 
-<!-- ================= Case Studies ================= -->
 <section id="case-studies">
   <h2 data-i18n="cases_title"></h2>
 
@@ -101,6 +61,7 @@
     <p data-i18n="aws_desc"></p>
 
     <h4 data-i18n="architecture_label"></h4>
+
     <img src="assets/img/Industrial Data Architecture.svg" alt="Industrial Data Architecture Diagram" class="card-img">
 
     <h4 data-i18n="design_label"></h4>
@@ -113,6 +74,7 @@
 
     <h4 data-i18n="results_label"></h4>
     <p data-i18n="aws_results"></p>
+
   </div>
 
   <!-- OEE CASE -->
@@ -140,9 +102,8 @@
     <h4 data-i18n="impact_label"></h4>
     <p data-i18n="oee_results"></p>
   </div>
-
-  <!-- PRODUCTION MONITORING -->
-  <div class="card">
+    <!-- PRODUCTION MONITORING -->
+    <div class="card">
     <h3 data-i18n="pm_title"></h3>
     <p data-i18n="pm_p"></p>
 
@@ -157,7 +118,6 @@
   </div>
 </section>
 
-<!-- ================= Contact ================= -->
 <section id="contact">
   <div class="card center">
     <h3 data-i18n="contact_title"></h3>
@@ -169,5 +129,6 @@
 
 <script src="js/translations.js" defer></script>
 <script src="js/main.js" defer></script>
+
 </body>
 </html>
