--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <a href="https://www.linkedin.com/in/aguirrenic/" target="_blank" aria-label="LinkedIn">
         <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
       </a>
-      <a href="https://aguirrenic.github.io/" target="_blank" aria-label="GitHub">
+      <a href="https://github.com/aguirrenic" target="_blank" aria-label="GitHub">
         <img src="assets/icons/github.svg" alt="GitHub" />
       </a>
       <a href="mailto:aguirrenic@gmail.com" aria-label="Email">
