--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <span data-i18n="metric_4"></span>
     </div>
 
-    <a href="#summary" class="btn" data-i18n="hero_btn"></a>
+ <!--   <a href="#summary" class="btn" data-i18n="hero_btn"></a>-->
 
     <div class="language-switch">
       <button onclick="setLanguage('en')">EN</button>
