--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <!-- ================= Hero ================= -->
-<header class="hero">
+<section class="hero">
   <div class="hero-content">
     <h1>Nicolás Aguirre</h1>
     <h2 data-i18n="hero_title"></h2>
@@ -42,7 +42,7 @@
       <button onclick="setLanguage('es')">ES</button>
     </div>
   </div>
-</header>
+</section>
 
 <!-- ================= Summary ================= -->
 <section id="summary">
