Added skills section
Added skills section

--- a/index.html
+++ b/index.html
@@ -84,23 +84,37 @@
   </div>
 </section>
 
-<!-- ================= Impact ================= -->
-<section id="impact">
-  <h2 data-i18n="impact_title"></h2>
+<!-- ================= Skills ================= -->
+<section id="skills">
+  <h2 data-i18n="skills.title"></h2>
 
-  <div class="card">
-    <h3 data-i18n="impact_1_title"></h3>
-    <p data-i18n="impact_1_desc"></p>
+  <div class="skills-intro">
+    <p data-i18n="skills.intro"></p>
   </div>
 
-  <div class="card">
-    <h3 data-i18n="impact_2_title"></h3>
-    <p data-i18n="impact_2_desc"></p>
+  <div class="skills-block">
+    <h3 data-i18n="skills.architecture.title"></h3>
+    <p data-i18n="skills.architecture.content"></p>
   </div>
 
-  <div class="card">
-    <h3 data-i18n="impact_3_title"></h3>
-    <p data-i18n="impact_3_desc"></p>
+  <div class="skills-block">
+    <h3 data-i18n="skills.cloud.title"></h3>
+    <p data-i18n="skills.cloud.content"></p>
+  </div>
+
+  <div class="skills-block">
+    <h3 data-i18n="skills.engineering.title"></h3>
+    <p data-i18n="skills.engineering.content"></p>
+  </div>
+
+  <div class="skills-block">
+    <h3 data-i18n="skills.analytics.title"></h3>
+    <p data-i18n="skills.analytics.content"></p>
+  </div>
+
+  <div class="skills-block">
+    <h3 data-i18n="skills.leadership.title"></h3>
+    <p data-i18n="skills.leadership.content"></p>
   </div>
 </section>
 
