Changes in skills
Changes in skills

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
   </div>
 </section>
 
-<!-- ================= Skills ================= -->
 <section id="skills">
   <h2 data-i18n="skills.title"></h2>
 
@@ -92,29 +91,33 @@
     <p data-i18n="skills.intro"></p>
   </div>
 
-  <div class="skills-block">
-    <h3 data-i18n="skills.architecture.title"></h3>
-    <p data-i18n="skills.architecture.content"></p>
-  </div>
+  <div class="skills-grid">
 
-  <div class="skills-block">
-    <h3 data-i18n="skills.cloud.title"></h3>
-    <p data-i18n="skills.cloud.content"></p>
-  </div>
+    <div class="skills-block">
+      <h3 data-i18n="skills.architecture.title"></h3>
+      <p data-i18n="skills.architecture.content"></p>
+    </div>
 
-  <div class="skills-block">
-    <h3 data-i18n="skills.engineering.title"></h3>
-    <p data-i18n="skills.engineering.content"></p>
-  </div>
+    <div class="skills-block">
+      <h3 data-i18n="skills.cloud.title"></h3>
+      <p data-i18n="skills.cloud.content"></p>
+    </div>
 
-  <div class="skills-block">
-    <h3 data-i18n="skills.analytics.title"></h3>
-    <p data-i18n="skills.analytics.content"></p>
-  </div>
+    <div class="skills-block">
+      <h3 data-i18n="skills.engineering.title"></h3>
+      <p data-i18n="skills.engineering.content"></p>
+    </div>
 
-  <div class="skills-block">
-    <h3 data-i18n="skills.leadership.title"></h3>
-    <p data-i18n="skills.leadership.content"></p>
+    <div class="skills-block">
+      <h3 data-i18n="skills.analytics.title"></h3>
+      <p data-i18n="skills.analytics.content"></p>
+    </div>
+
+    <div class="skills-block">
+      <h3 data-i18n="skills.leadership.title"></h3>
+      <p data-i18n="skills.leadership.content"></p>
+    </div>
+
   </div>
 </section>
 
