Added profile picture
Added profile picture

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
  <!--   <a href="#summary" class="btn" data-i18n="hero_btn"></a>-->
 
+    <img class="profile-pic" src="images/profile.jpeg" alt="">
+
     <div class="language-switch">
       <button onclick="setLanguage('en')">EN</button>
       <button onclick="setLanguage('es')">ES</button>
