Changes in profile
Changes in profile

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
  <!--   <a href="#summary" class="btn" data-i18n="hero_btn"></a>-->
 
-    <img class="profile-pic" src="images/profile.png" alt="">
+    <img class="profile-pic" src="img/profile.png" alt="">
 
     <div class="language-switch">
       <button onclick="setLanguage('en')">EN</button>
