--- a/index.html
+++ b/index.html
@@ -126,65 +126,66 @@
 <!-- ================= Case Studies ================= -->
 <section id="case-studies">
   <h2 data-i18n="cases_title"></h2>
-
+  <div class="cases-grid">
   <!-- AWS CASE -->
-  <div class="card">
-    <h3 data-i18n="aws_title"></h3>
-    <p data-i18n="aws_desc"></p>
+    <div class="card">
+        <h3 data-i18n="aws_title"></h3>
+        <p data-i18n="aws_desc"></p>
 
-    <h4 data-i18n="architecture_label"></h4>
-    <img src="assets/img/Industrial Data Architecture.svg" alt="Industrial Data Architecture Diagram" class="card-img">
+        <h4 data-i18n="architecture_label"></h4>
+        <img src="assets/img/Industrial Data Architecture.svg" alt="Industrial Data Architecture Diagram" class="card-img">
 
-    <h4 data-i18n="design_label"></h4>
-    <ul>
-      <li data-i18n="aws_l1"></li>
-      <li data-i18n="aws_l2"></li>
-      <li data-i18n="aws_l3"></li>
-      <li data-i18n="aws_l4"></li>
-    </ul>
+        <h4 data-i18n="design_label"></h4>
+        <ul>
+        <li data-i18n="aws_l1"></li>
+        <li data-i18n="aws_l2"></li>
+        <li data-i18n="aws_l3"></li>
+        <li data-i18n="aws_l4"></li>
+        </ul>
 
-    <h4 data-i18n="results_label"></h4>
-    <p data-i18n="aws_results"></p>
-  </div>
+        <h4 data-i18n="results_label"></h4>
+        <p data-i18n="aws_results"></p>
+    </div>
 
-  <!-- OEE CASE -->
-  <div class="card">
-    <h3 data-i18n="oee_title"></h3>
-    <p data-i18n="oee_desc"></p>
+    <!-- OEE CASE -->
+    <div class="card">
+        <h3 data-i18n="oee_title"></h3>
+        <p data-i18n="oee_desc"></p>
 
-    <div class="video-wrapper">
+        <div class="video-wrapper">
+            <iframe width="100%" height="400"
+                src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
+                title="OEE Dashboard"
+                frameborder="0"
+                allowfullscreen>
+            </iframe>
+        </div>
+
+        <h4 data-i18n="capabilities_label"></h4>
+        <ul>
+        <li data-i18n="oee_l1"></li>
+        <li data-i18n="oee_l2"></li>
+        <li data-i18n="oee_l3"></li>
+        <li data-i18n="oee_l4"></li>
+        </ul>
+
+        <h4 data-i18n="impact_label"></h4>
+        <p data-i18n="oee_results"></p>
+    </div>
+
+    <!-- PRODUCTION MONITORING -->
+    <div class="card">
+        <h3 data-i18n="pm_title"></h3>
+        <p data-i18n="pm_p"></p>
+
+        <div class="video-wrapper">
         <iframe width="100%" height="400"
-            src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
-            title="OEE Dashboard"
+            src="https://www.youtube.com/embed/yPQCoDDLgqc?rel=0"
+            title="Production Monitoring Dashboard"
             frameborder="0"
             allowfullscreen>
         </iframe>
-    </div>
-
-    <h4 data-i18n="capabilities_label"></h4>
-    <ul>
-      <li data-i18n="oee_l1"></li>
-      <li data-i18n="oee_l2"></li>
-      <li data-i18n="oee_l3"></li>
-      <li data-i18n="oee_l4"></li>
-    </ul>
-
-    <h4 data-i18n="impact_label"></h4>
-    <p data-i18n="oee_results"></p>
-  </div>
-
-  <!-- PRODUCTION MONITORING -->
-  <div class="card">
-    <h3 data-i18n="pm_title"></h3>
-    <p data-i18n="pm_p"></p>
-
-    <div class="video-wrapper">
-      <iframe width="100%" height="400"
-        src="https://www.youtube.com/embed/yPQCoDDLgqc?rel=0"
-        title="Production Monitoring Dashboard"
-        frameborder="0"
-        allowfullscreen>
-      </iframe>
+        </div>
     </div>
   </div>
 </section>
